--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@types/styled-components": "^4.1.18",
     "react": "16.8.6",
-    "react-native": "0.60.3"
+    "react-native": "0.60.3",
+    "styled-components": "^4.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
