--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@types/react-redux": "^7.1.1",
     "@types/styled-components": "^4.1.18",
     "react": "16.8.6",
     "react-native": "0.60.3",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4",
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
