--- a/package.json
+++ b/package.json
@@ -14,18 +14,22 @@
     "react-native": "0.60.3",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
+    "redux-saga": "^1.0.5",
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
     "@babel/runtime": "^7.5.4",
-    "@react-native-community/eslint-config": "^0.0.5",
     "@types/jest": "^24.0.15",
     "@types/react": "^16.8.23",
     "@types/react-native": "^0.60.0",
     "@types/react-test-renderer": "^16.8.2",
     "babel-jest": "^24.8.0",
     "eslint": "^6.0.1",
+    "eslint-config-airbnb-typescript": "^4.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
     "jest": "^24.8.0",
     "metro-react-native-babel-preset": "^0.55.0",
     "react-test-renderer": "16.8.6",
