--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "dependencies": {
     "@types/react-redux": "^7.1.1",
     "@types/styled-components": "^4.1.18",
+    "axios": "^0.19.0",
     "react": "16.8.6",
     "react-native": "0.60.3",
+    "react-native-gesture-handler": "^1.3.0",
+    "react-native-reanimated": "^1.2.0",
+    "react-navigation": "^3.11.1",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
     "redux-saga": "^1.0.5",
