--- a/package.json
+++ b/package.json
@@ -8,36 +8,36 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@types/react-redux": "^7.1.1",
-    "@types/styled-components": "^4.1.18",
-    "axios": "^0.19.0",
-    "react": "16.8.6",
-    "react-native": "0.60.3",
-    "react-native-gesture-handler": "^1.3.0",
-    "react-native-reanimated": "^1.2.0",
-    "react-navigation": "^3.11.1",
-    "react-redux": "^7.1.0",
-    "redux": "^4.0.4",
-    "redux-saga": "^1.0.5",
-    "styled-components": "^4.3.2"
+    "@types/react-redux": "7.1.5",
+    "@types/styled-components": "4.1.19",
+    "axios": "0.19.0",
+    "react": "16.10.2",
+    "react-native": "0.61.2",
+    "react-native-gesture-handler": "1.4.1",
+    "react-native-reanimated": "1.3.0",
+    "react-navigation": "4.0.10",
+    "react-redux": "7.1.1",
+    "redux": "4.0.4",
+    "redux-saga": "1.1.1",
+    "styled-components": "4.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.4",
-    "@babel/runtime": "^7.5.4",
-    "@types/jest": "^24.0.15",
-    "@types/react": "^16.8.23",
-    "@types/react-native": "^0.60.0",
-    "@types/react-test-renderer": "^16.8.2",
-    "babel-jest": "^24.8.0",
-    "eslint": "^6.0.1",
-    "eslint-config-airbnb-typescript": "^4.0.1",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.3",
-    "jest": "^24.8.0",
-    "metro-react-native-babel-preset": "^0.55.0",
-    "react-test-renderer": "16.8.6",
-    "typescript": "^3.5.3"
+    "@babel/core": "7.6.4",
+    "@babel/runtime": "7.6.3",
+    "@types/jest": "24.0.19",
+    "@types/react": "16.9.9",
+    "@types/react-native": "0.60.21",
+    "@types/react-test-renderer": "16.9.1",
+    "babel-jest": "24.9.0",
+    "eslint": "6.5.1",
+    "eslint-config-airbnb-typescript": "5.0.0",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.16.0",
+    "jest": "24.9.0",
+    "metro-react-native-babel-preset": "0.56.0",
+    "react-test-renderer": "16.10.2",
+    "typescript": "3.6.4"
   },
   "jest": {
     "preset": "react-native"
